# statsuite-lib

./: .coverage  .gitignore  .safety-policy.yml  Makefile  README.md  ci.sh  pyproject.toml  test.py
.github/workflows/: delete-runs.yml  workflow.yml
docs/source/: conf.py  index.rst  statsuite_lib.auth.rst  statsuite_lib.config.rst  statsuite_lib.keycloak.rst  statsuite_lib.nsi.rst  statsuite_lib.sfs.rst  statsuite_lib.transfer.rst
statsuite_lib/: __init__.py
statsuite_lib/auth/: __init__.py  auth.py
statsuite_lib/config/: __init__.py  config.py  models.py
statsuite_lib/keycloak/: __init__.py  keycloak.py
statsuite_lib/nsi/: __init__.py  nsi.py
statsuite_lib/sfs/: __init__.py  models.py  sfs.py
statsuite_lib/solr/: __init__.py  solr.py
statsuite_lib/transfer/: __init__.py  transfer.py
tests/: test_auth.py  test_config.py  test_keycloak.py  test_nsi.py  test_sfs.py  test_solr.py  test_transfer.py
tests/sfs/: test_sfs.py
