[tool.poetry]
name = "statsuite_lib"
version = "0.1.3"
description = ""
authors = ["Sergio Pena <isergiopena@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<4.0"
httpx = "^0.28.1"
pydantic = "2.9.2"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
pytest-httpx = "^0.35.0"
pytest = "^8.3.4"
pytest-coverage = "^0.0"
pytest-mock = "^3.14.0"
bandit = "^1.8.0"
flake8-simplify = "^0.21.0"
black = "^24.10.0"
flake8-variables-names = "^0.0.6"
flake8-functions-names = "^0.4.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-expression-complexity = "^0.0.11"
flake8-docstrings-complete = "^1.4.1"
flake8-black = "^0.3.6"
flake8-bandit = "^4.1.1"
flake8-isort = "^6.1.1"
safety = "^3.2.14"
flake8-pyproject = "^1.2.3"
freezegun = "^1.5.3"
cryptography = ">=44.0.2"
sphinx = "^8.2.3"
pdoc = "^15.0.4"
sphinx-rtd-theme = "^3.0.2"
myst-parser = "^4.0.1"
sphinx-toolbox = "^4.0.0"
pip = "^25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = ['.poetry']
ignore = ['E231', 'E241']
per-file-ignores = [
    '__init__.py:F401',
    'tests/*py:S101',
]
max-line-length = 95
